--- a/trunk/app/bixochecker/.classpath
+++ b/trunk/app/bixochecker/.classpath
@@ -9,5 +9,8 @@
 	<classpathentry kind="lib" path="lib/commons-httpclient-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3.8.1"/>
+	<classpathentry kind="lib" path="lib/swing-layout-1.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/napkinlaf.jar"/>
+	<classpathentry kind="lib" path="lib/napkinlaf-swingset2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
