Finalizacao das implementacoes 1.0

--- a/app/bixochecker/src/resources/configuration.cfg
+++ b/app/bixochecker/src/resources/configuration.cfg
@@ -1,5 +1,6 @@
 ##
-sleep.time=30
+general.sleep.time=30
+general.request.year=2009
 conn.proxy.enabled=true
 conn.proxy.host=192.168.1.1
 conn.proxy.port=3129
